--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy==1.21.0
-tensorflow==2.5.0
+numpy~=1.23.5
+tensorflow~=2.12.0
 tensorflow-hub==0.12.0
-Pillow==8.2.0
+Pillow~=9.5.0
 python-telegram-bot==13.6
-psycopg2==2.9.1
+psycopg2~=2.9.5
+telegram~=0.0.1
+numba~=0.57.0
+aiohttp~=3.8.4
