--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ tensorflow~=2.12.0
 tensorflow-hub==0.12.0
 Pillow~=9.5.0
 python-telegram-bot==13.6
-psycopg2~=2.9.5
+psycopg2-binary
 telegram~=0.0.1
 numba~=0.57.0
 aiohttp~=3.8.4
+protobuf=3.20.0
