--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
+      - PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
       - POSTGRES_DB=pricehub
